Took background off the footer because it lef to the background covering the socials icons. Added max-width to project-title in ProjectCards to prevent project-title pushing the technology logos off the card.

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,7 +2,6 @@
   position: absolute;
   text-align: center;
   width: 100%;
-  background: #001524;
   margin: 0;
 }
 
